# test

./: .gitignore
coldwing/: .env  .env.example  PROJECT_STATE.md  README.md  pyproject.toml
coldwing/coldwing/: __init__.py  main.py  service.py
coldwing/coldwing/api/: app.py  authz.py  scheduler.py  schemas.py  storage.py  tenants.py
coldwing/coldwing/core/: __init__.py  api_integrations.py  baseline.py  dns_analysis.py  email_security.py  exposure_check.py  hosting_info.py  profiles.py  scope.py  ssl_analysis.py  subdomain_enum.py  tech_fingerprint.py
coldwing/coldwing/core/redteam/: content_discovery.py  deep_fingerprint.py  exposure_plus.py
coldwing/coldwing/queue/: adapter.py  rq_adapter.py
coldwing/coldwing/report/: report_html.py  report_json.py
coldwing/coldwing/report/templates/: report.html.j2  styles.css
coldwing/coldwing/utils/: config_loader.py  logger.py  rate_limit.py
coldwing/coldwing/worker/: rq_worker.py  tasks.py
coldwing/docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
coldwing/examples/: scope_example.yaml
coldwing/profiles/: advanced.yaml  exposure.yaml  redteam.yaml  snapshot.yaml
coldwing/tests/: test_api_basic.py  test_profiles.py  test_scheduler.py  test_scope.py
