[project]
name = "coldwing-scanner-platform"
version = "0.1.0"
description = "Coldwing Scanner Platform (CSP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.2",
  "jinja2>=3.1.4",
  "redis>=5.0.8",
  "rq>=1.16.2",
  "apscheduler>=3.10.4",
  "httpx>=0.27.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["coldwing*"]
exclude = ["docker*", "profiles*", "examples*", "tests*"]
